--- a/contact/index.html
+++ b/contact/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.3/components/contacts/contact-1/assets/css/contact-1.css" />
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/hw-lanscaping/css/main.css">
   </head>
 
   <body class="d-flex flex-column min-vh-100">
@@ -18,8 +18,8 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary bg-success">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">
-            <img src="/images/hwl-logo.svg" alt="Herbert West Landscaping">
+          <a class="navbar-brand" href="/hw-lanscaping/index.html">
+            <img src="/hw-lanscaping/images/hwl-logo.svg" alt="Herbert West Landscaping">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -27,16 +27,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link text-light" href="/services/index.html">Services</a>
+                <a class="nav-link text-light" href="/hw-lanscaping/services/index.html">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" aria-current="page" href="/projects/">Projects</a>
+                <a class="nav-link text-light" aria-current="page" href="/hw-lanscaping/projects/index.html">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="/products/">Products</a>
+                <a class="nav-link text-light" href="/hw-lanscaping/products/index.html">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light active" href="/contact/">Contact</a>
+                <a class="nav-link text-light active" href="/hw-lanscaping/contact/index.html">Contact</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -51,7 +51,7 @@
       <div class="container-fluid">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item text-success"><a href="/" class="text-decoration-none text-success">Home</a></li>
+            <li class="breadcrumb-item text-success"><a href="/hw-lanscaping/index.html" class="text-decoration-none text-success">Home</a></li>
             <li class="breadcrumb-item active" aria-current="page">Contact</li>
           </ol>
         </nav>
@@ -178,18 +178,18 @@
           </h2>
           <ul class="list-inline">
             <li class="list-inline-item">
-              <img src="/images/social-media-icons/facebook-hwl.svg" alt="Twitter" width="48" height="48">
+              <img src="/hw-lanscaping/images/social-media-icons/facebook-hwl.svg" alt="Twitter" width="48" height="48">
             </li>
             <li class="list-inline-item">
-              <img src="/images/social-media-icons/mastodon-hwl.svg" alt="Mastodon" width="48" height="48">
+              <img src="/hw-lanscaping/images/social-media-icons/mastodon-hwl.svg" alt="Mastodon" width="48" height="48">
 
             </li>
             <li class="list-inline-item">
-              <img src="/images/social-media-icons/instagram-hwl.svg" alt="Instagram" width="48" height="48">
+              <img src="/hw-lanscaping/images/social-media-icons/instagram-hwl.svg" alt="Instagram" width="48" height="48">
 
             </li>
             <li class="list-inline-item">
-              <img src="/images/social-media-icons/linkedin-hwl.svg" alt="LinkedIn" width="48" height="48">
+              <img src="/hw-lanscaping/images/social-media-icons/linkedin-hwl.svg" alt="LinkedIn" width="48" height="48">
 
             </li>
           </ul>
