--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 
     <title>Herbert West Landscaping</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
   </head>
 
   <body class="d-flex flex-column min-vh-100">
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary bg-success">
         <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html">
-            <img src="./images/hwl-logo.svg" alt="Herbert West Landscaping">
+          <a class="navbar-brand" href="/index.html">
+            <img src="/images/hwl-logo.svg" alt="Herbert West Landscaping">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,16 +23,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link text-light" aria-current="page" href="./services/index.html">Services</a>
+                <a class="nav-link text-light" aria-current="page" href="/services/index.html">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="./projects/index.html">Projects</a>
+                <a class="nav-link text-light" href="/projects/index.html">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="./products/index.html">Products</a>
+                <a class="nav-link text-light" href="/products/index.html">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="./contact/index.html">Contact</a>
+                <a class="nav-link text-light" href="/contact/index.html">Contact</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -71,7 +71,7 @@
         <div class="row">
           <section class="col-lg-4 mb-3">
             <div class="card h-100">
-              <img src="./images/home/family-lambert.webp" class="card-img-top" alt="The insidious Lambert family">
+              <img src="/images/home/family-lambert.webp" class="card-img-top" alt="The insidious Lambert family">
               <div class="card-body">
                 <h3 class="card-title h4">The Lambert Family</h3>
                 <p class="card-text hanging">
@@ -82,7 +82,7 @@
           </section>
           <section class="col-lg-4 mb-3">
             <div class="card h-100">
-              <img src="./images/home/family-torrance.webp" class="card-img-top" alt="The shining bright Torrance family">
+              <img src="/images/home/family-torrance.webp" class="card-img-top" alt="The shining bright Torrance family">
               <div class="card-body">
                 <h3 class="card-title h4">The Torrance Family</h3>
                 <p class="card-text hanging">
@@ -94,7 +94,7 @@
           </section>
           <section class="col-lg-4 mb-3">
             <div class="card h-100">
-              <img src="./images/home/family-oswalt.webp" class="card-img-top" alt="The sinister Oswalt family">
+              <img src="/images/home/family-oswalt.webp" class="card-img-top" alt="The sinister Oswalt family">
               <div class="card-body">
                 <h3 class="card-title h4">The Oswalt Family</h3>
                 <p class="card-text hanging">
@@ -144,18 +144,18 @@
           </h2>
           <ul class="list-inline">
             <li class="list-inline-item">
-              <img src="./images/social-media-icons/facebook-hwl.svg" alt="Twitter" width="48" height="48">
+              <img src="/images/social-media-icons/facebook-hwl.svg" alt="Twitter" width="48" height="48">
             </li>
             <li class="list-inline-item">
-              <img src="./images/social-media-icons/mastodon-hwl.svg" alt="Mastodon" width="48" height="48">
+              <img src="/images/social-media-icons/mastodon-hwl.svg" alt="Mastodon" width="48" height="48">
 
             </li>
             <li class="list-inline-item">
-              <img src="./images/social-media-icons/instagram-hwl.svg" alt="Instagram" width="48" height="48">
+              <img src="/images/social-media-icons/instagram-hwl.svg" alt="Instagram" width="48" height="48">
 
             </li>
             <li class="list-inline-item">
-              <img src="./images/social-media-icons/linkedin-hwl.svg" alt="LinkedIn" width="48" height="48">
+              <img src="/images/social-media-icons/linkedin-hwl.svg" alt="LinkedIn" width="48" height="48">
 
             </li>
           </ul>
