--- a/products/fertilizers.html
+++ b/products/fertilizers.html
@@ -7,15 +7,15 @@
 
     <title>Fertilizers :: Herbert West Landscaping</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="/hw-lanscaping/css/main.css">
   </head>
 
   <body class="d-flex flex-column min-vh-100">
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary bg-success">
         <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html">
-            <img src="./images/hwl-logo.svg" alt="Herbert West Landscaping">
+          <a class="navbar-brand" href="/hw-lanscaping/index.html">
+            <img src="/hw-lanscaping/images/hwl-logo.svg" alt="Herbert West Landscaping">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,16 +23,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link text-light" href="./services/index.html">Services</a>
+                <a class="nav-link text-light" href="/hw-lanscaping/services/index.html">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="./projects/index.html">Projects</a>
+                <a class="nav-link text-light" href="/hw-lanscaping/projects/index.html">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light active" aria-current="page" href="./products/index.html">Products</a>
+                <a class="nav-link text-light active" aria-current="page" href="/hw-lanscaping/products/index.html">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="./contact/index.html">Contact</a>
+                <a class="nav-link text-light" href="/hw-lanscaping/contact/index.html">Contact</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -47,8 +47,8 @@
       <div class="container-fluid">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item text-success"><a href="./index.html" class="text-decoration-none text-success">Home</a></li>
-            <li class="breadcrumb-item text-success"><a href="./products/index.html" class="text-decoration-none text-success">Products</a></li>
+            <li class="breadcrumb-item text-success"><a href="/hw-lanscaping/index.html" class="text-decoration-none text-success">Home</a></li>
+            <li class="breadcrumb-item text-success"><a href="/hw-lanscaping/products/index.html" class="text-decoration-none text-success">Products</a></li>
             <li class="breadcrumb-item active" aria-current="page">Fertilizers</li>
           </ol>
         </nav>
@@ -119,7 +119,7 @@
           <div class="row">
             <section class="mb-4 col-md-6 col-lg-4 col-xl-3">
               <div class="card h-100">
-                <img src="./images/employees/kaka-whoopsy.webp" alt="Kaka Whoopsy" class="card-img-top">
+                <img src="/hw-lanscaping/images/employees/kaka-whoopsy.webp" alt="Kaka Whoopsy" class="card-img-top">
                 <div class="card-body">
                   <p class="card-text">
                     Kaka Whoopsy, a former big game hunter who was famous for always staying on the spoor
@@ -129,7 +129,7 @@
             </section>
             <section class="mb-4 col-md-6 col-lg-4 col-xl-3">
               <div class="card h-100">
-                <img src="./images/employees/b-s-ordure.webp" alt="B.S. Ordure" class="card-img-top">
+                <img src="/hw-lanscaping/images/employees/b-s-ordure.webp" alt="B.S. Ordure" class="card-img-top">
                 <div class="card-body">
                   <p class="card-text">
                     B.S. Ordure, a former percussionist who played with Green Day on their 3rd album <em>Dookie</em> and with the Rolling Stones on their song “Doo Doo Doo Doo Doo (Heartbreaker)”
@@ -139,7 +139,7 @@
             </section>
             <section class="mb-4 col-md-6 col-lg-4 col-xl-3">
               <div class="card h-100">
-                <img src="./images/employees/colonel-bat-guano.webp" alt="Colonel 'Bat' Guano" class="card-img-top">
+                <img src="/hw-lanscaping/images/employees/colonel-bat-guano.webp" alt="Colonel 'Bat' Guano" class="card-img-top">
                 <div class="card-body">
                   <p class="card-text">
                     Colonel “Bat” Guano, a former aide to Dr. Strangelove who unfortunately had to leave the military after an unfortunate Coke machine shooting
@@ -149,7 +149,7 @@
             </section>
             <section class="mb-4 col-md-6 col-lg-4 col-xl-3">
               <div class="card h-100">
-                <img src="./images/employees/b-m-dunghill.webp" alt="B.M. Dunghill" class="card-img-top">
+                <img src="/hw-lanscaping/images/employees/b-m-dunghill.webp" alt="B.M. Dunghill" class="card-img-top">
                 <div class="card-body">
                   <p class="card-text">
                     B.M. Dunghill, a former mall cop who runs like a bull toward any manure he can provide to our customers until he is completely pooped and has to stop
@@ -201,18 +201,18 @@
           </h2>
           <ul class="list-inline">
             <li class="list-inline-item">
-              <img src="./images/social-media-icons/facebook-hwl.svg" alt="Twitter" width="48" height="48">
+              <img src="/hw-lanscaping/images/social-media-icons/facebook-hwl.svg" alt="Twitter" width="48" height="48">
             </li>
             <li class="list-inline-item">
-              <img src="./images/social-media-icons/mastodon-hwl.svg" alt="Mastodon" width="48" height="48">
+              <img src="/hw-lanscaping/images/social-media-icons/mastodon-hwl.svg" alt="Mastodon" width="48" height="48">
 
             </li>
             <li class="list-inline-item">
-              <img src="./images/social-media-icons/instagram-hwl.svg" alt="Instagram" width="48" height="48">
+              <img src="/hw-lanscaping/images/social-media-icons/instagram-hwl.svg" alt="Instagram" width="48" height="48">
 
             </li>
             <li class="list-inline-item">
-              <img src="./images/social-media-icons/linkedin-hwl.svg" alt="LinkedIn" width="48" height="48">
+              <img src="/hw-lanscaping/images/social-media-icons/linkedin-hwl.svg" alt="LinkedIn" width="48" height="48">
 
             </li>
           </ul>
