--- a/products/seed.html
+++ b/products/seed.html
@@ -7,7 +7,7 @@
 
     <title>Herbert West Landscaping</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="/workspaces/hw-lanscaping/css/main.css">
   </head>
 
   <body class="d-flex flex-column min-vh-100">
