--- a/projects/index.html
+++ b/projects/index.html
@@ -7,15 +7,15 @@
 
     <title>Projects :: Herbert West Landscaping</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="/hw-lanscaping/css/main.css">
   </head>
 
   <body class="d-flex flex-column min-vh-100">
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary bg-success">
         <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html">
-            <img src="./images/hwl-logo.svg" alt="Herbert West Landscaping">
+          <a class="navbar-brand" href="/hw-lanscaping/index.html">
+            <img src="/hw-lanscaping/images/hwl-logo.svg" alt="Herbert West Landscaping">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,16 +23,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link text-light" href="/services/index.html">Services</a>
+                <a class="nav-link text-light" href="/hw-lanscaping/services/index.html">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light active" aria-current="page" href="/projects/">Projects</a>
+                <a class="nav-link text-light active" aria-current="page" href="/hw-lanscaping/projects/index.html">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="/products/">Products</a>
+                <a class="nav-link text-light" href="/hw-lanscaping/products/index.html">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="/contact/">Contact</a>
+                <a class="nav-link text-light" href="/hw-lanscaping/contact/index.html">Contact</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -72,7 +72,7 @@
       <div class="multi-column container-fluid">
         <div class="col mb-3 d-inline-block">
           <div class="card">
-            <img src="/images/projects/project-1.webp" alt="Project 1" class="img-fluid">
+            <img src="/hw-lanscaping//images/projects/project-1.webp" alt="Project 1" class="img-fluid">
             <div class="card-body">
               <p class="card-text">
                 Such a beautifully-mowed lawn, with just a hint of yellow & purple as accents. Chef’s kiss. However, we do advise you to step carefully behind that bush. It’s Earl’s favorite place.
@@ -82,7 +82,7 @@
         </div>
         <div class="col mb-3 d-inline-block">
           <div class="card">
-            <img src="/images/projects/project-2.webp" alt="Project 2" class="img-fluid">
+            <img src="/hw-lanscaping/images/projects/project-2.webp" alt="Project 2" class="img-fluid">
             <div class="card-body">
               <p class="card-text">
                 Veeblefetzer University was very happy with how our grass perfectly marched alongside their styrofoam sidewalks.
@@ -92,7 +92,7 @@
         </div>
         <div class="col mb-3 d-inline-block">
           <div class="card">
-            <img src="/images/projects/project-3.webp" alt="Project 3" class="img-fluid">
+            <img src="/hw-lanscaping/images/projects/project-3.webp" alt="Project 3" class="img-fluid">
             <div class="card-body">
               <p class="card-text">
                 Lord Haffrrhengenden was most pleased with the lovely job we did on his familial estate out in Weggenwestershireton, East Sussex, Camton-Upon-Wensleydale. We even got a “Pip-pip!” and a “Tally-ho!” for our troubles!
@@ -102,7 +102,7 @@
         </div>
         <div class="col mb-3 d-inline-block">
           <div class="card">
-            <img src="/images/projects/project-4.webp" alt="Project 4" class="img-fluid">
+            <img src="/hw-lanscaping/images/projects/project-4.webp" alt="Project 4" class="img-fluid">
             <div class="card-body">
               <p class="card-text">
                 We were very proud of how our lawn work perfectly matched the ridiculously overdone lighting in this James Bond villain’s evil lair. Yes, he made us say that.
@@ -112,7 +112,7 @@
         </div>
         <div class="col mb-3 d-inline-block">
           <div class="card">
-            <img src="/images/projects/project-5.webp" alt="Project 5" class="img-fluid">
+            <img src="/hw-lanscaping/images/projects/project-5.webp" alt="Project 5" class="img-fluid">
             <div class="card-body">
               <p class="card-text">
                 You try getting all that grass lined up with stars like that. Go ahead. We dare you. It’s really hard!
@@ -129,7 +129,7 @@
         </div>
         <div class="col mb-3 d-inline-block">
           <div class="card">
-            <img src="/images/projects/project-6.webp" alt="Project 6" class="img-fluid">
+            <img src="/hw-lanscaping/images/projects/project-6.webp" alt="Project 6" class="img-fluid">
             <div class="card-body">
               <p class="card-text">
                 The lake nymphs in this grove are particularly vicious, causing us to lose eight men to siren calls that led to their eventual drowning, but once we figured out what was going on and how to fix the problem, we were able to do a great job on this lawn. Thank you, dynamite!
@@ -139,7 +139,7 @@
         </div>
         <div class="col mb-3 d-inline-block">
           <div class="card">
-            <img src="/images/projects/project-7.webp" alt="Project 7" class="img-fluid">
+            <img src="/hw-lanscaping/images/projects/project-7.webp" alt="Project 7" class="img-fluid">
             <div class="card-body">
               <p class="card-text">
                 Please, dear sir, do come in to our lovely inn. Ignore the fish-people and the cultists and the tentacles and sign in. You will have a lovely stay — that we can assure you. Ph’nglui mglw’nafh Cthulhu R’lyeh wgah’nagl fhtagn!
@@ -149,7 +149,7 @@
         </div>
         <div class="col mb-3 d-inline-block">
           <div class="card">
-            <img src="/images/projects/project-8.webp" alt="Project 8" class="img-fluid">
+            <img src="/hw-lanscaping/images/projects/project-8.webp" alt="Project 8" class="img-fluid">
             <div class="card-body">
               <p class="card-text">
                 I have no idea why the owner wanted us to place giant pieces of mozzarella cheese on the lawn, but we do what we’re told.
@@ -159,7 +159,7 @@
         </div>
         <div class="col mb-3 d-inline-block">
           <div class="card">
-            <img src="/images/projects/project-9.webp" alt="Project 9" class="img-fluid">
+            <img src="/hw-lanscaping/images/projects/project-9.webp" alt="Project 9" class="img-fluid">
             <div class="card-body">
               <p class="card-text">
                 It seemed like it was do-able, so we brought the goats in. And then we discovered why you do not mix male and female goats if you want them to learn how to use riding lawnmowers.
@@ -206,18 +206,18 @@
           </h2>
           <ul class="list-inline">
             <li class="list-inline-item">
-              <img src="/images/social-media-icons/facebook-hwl.svg" alt="Twitter" width="48" height="48">
+              <img src="/hw-lanscaping/images/social-media-icons/facebook-hwl.svg" alt="Twitter" width="48" height="48">
             </li>
             <li class="list-inline-item">
-              <img src="/images/social-media-icons/mastodon-hwl.svg" alt="Mastodon" width="48" height="48">
+              <img src="/hw-lanscaping/images/social-media-icons/mastodon-hwl.svg" alt="Mastodon" width="48" height="48">
 
             </li>
             <li class="list-inline-item">
-              <img src="/images/social-media-icons/instagram-hwl.svg" alt="Instagram" width="48" height="48">
+              <img src="/hw-lanscaping/images/social-media-icons/instagram-hwl.svg" alt="Instagram" width="48" height="48">
 
             </li>
             <li class="list-inline-item">
-              <img src="/images/social-media-icons/linkedin-hwl.svg" alt="LinkedIn" width="48" height="48">
+              <img src="/hw-lanscaping/images/social-media-icons/linkedin-hwl.svg" alt="LinkedIn" width="48" height="48">
 
             </li>
           </ul>
